Fix refresh comments linebreak on mobile

--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -24,7 +24,7 @@ $thumbnailWidthSmall: 1rem;
 .comment__sort {
   //margin: var(--spacing-s) 0;
   margin-right: var(--spacing-s);
-  display: block;
+  display: inline-block;
 
   @media (min-width: $breakpoint-small) {
     margin-top: 0;
